# Coronan

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yml  .envrc  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  LICENSE  README.MD  README.md  appveyor.yml  build.sh  cmake.nix  conanfile.py  conanfile.txt  coronan.code-workspace  default.nix  format_source_files.sh  inputs.nix  install-qt.sh  lock.toml  nix-lock.toml  py-requirements.txt  shell.nix  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: api-doc.yml  ci-linux-sanatizer.yml  ci-linux.yml  ci-macos.yml  ci-release.yml  ci-windows.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  coverity-scan.yml  coverity.yml  nix.yml  sonarqube-scan.yml
.gitpod/: automation.yml
.theia/: launch.json  settings.json  tasks.json
apps/: CMakeLists.txt  main.cpp
apps/cli/: CMakeLists.txt  main.cpp
apps/cli/src/: argument_parser.cpp  argument_parser.h  argument_parser.hpp  main.cpp
apps/cli/tests/: CMakeLists.txt  argument_parser_test.cpp
apps/cmd/: CMakeLists.txt  main.cpp
apps/qt/: CMakeLists.txt  country_chart_view.cpp  country_data_model.cpp  country_overview_table.cpp  country_overview_table_model.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/qt/cmake/: Qt.cmake
apps/qt/include/: country_chart_view.h  country_chart_view.hpp  country_data_model.h  country_data_model.hpp  country_overview_table.hpp  country_overview_table_model.h  country_overview_table_model.hpp  mainwindow.h
cmake/: CPackConfig.cmake  Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Coronan.cmake.in  Coverage.cmake  Doxygen.cmake  FindGcovr.cmake  MSVCEnvironment.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake  clang.cmake  conan.cmake
conan_profiles/: clang_debug_linux  clang_release_linux  gnu_debug_linux  gnu_release_linux
configured_files/: CMakeLists.txt  config.hpp.in  version.h.in
doc/: classcoronan_1_1CoronaAPIClientType-members.html  classcoronan_1_1HTTPClientException-members.html  classcoronan_1_1HTTPResponse.html  classcoronan_1_1SSLClient-members.html  classcoronan_1_1SSLClient.html  corona-api__client_8hpp_source.html  corona-api__parser_8hpp_source.html  files.html  functions.html  functions_func.html  genindex.html  http__client_8hpp_source.html  index.html  mainpage.html  objects.inv  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree  mainpage.doctree
doc/.doctrees/api/: corona_api_client.doctree  corona_api_parser.doctree  http_client.doctree  index.doctree
doc/_sources/: mainpage.rst.txt
doc/api/: corona_api_client.html  corona_api_parser.html  http_client.html  index.html
doc/search/: all_1.js  all_4.js  functions_3.js
docs/: .buildinfo  CMakeLists.txt  README_8md.html  annotated.html  annotated_dup.js  argument__parser_8cpp.html  argument__parser_8cpp.js  argument__parser_8h.html  argument__parser_8h.js  argument__parser_8h_source.html  argument__parser_8hpp.html  argument__parser_8hpp.js  argument__parser_8hpp_source.html  argument__parser__test_8cpp.html  bug.html  build_2__deps_2__doxygen__theme-src_2README_8md.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1SecondExample-members.html  classMyLibrary_1_1SecondExample.html  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classMyLibrary_1_1SubclassExample.js  classconanfile_1_1CoronanRecipe-members.html  classconanfile_1_1CoronanRecipe.html  classconanfile_1_1CoronanRecipe.js  classcoronan_1_1CoronaAPIClientType-members.html  classcoronan_1_1CoronaAPIClientType.html  classcoronan_1_1CoronaAPIClientType.js  classcoronan_1_1HTTPClientException-members.html  classcoronan_1_1HTTPClientException.html  classcoronan_1_1HTTPClientException.js  classcoronan_1_1HTTPResponse-members.html  classcoronan_1_1HTTPResponse.html  classcoronan_1_1HTTPResponse.js  classcoronan_1_1SSLClient-members.html  classcoronan_1_1SSLClient.html  classcoronan_1_1SSLClient.js  classcoronan_1_1api__parser_1_1DateParseException-members.html  classcoronan_1_1api__parser_1_1DateParseException.html  (+204 more)
docs/.doctrees/: environment.pickle  index.doctree  mainpage.doctree
docs/.doctrees/api/: corona_api_client.doctree  corona_api_parser.doctree  http_client.doctree  index.doctree
docs/_sources/: index.rst.txt  mainpage.rst.txt
docs/_sources/api/: corona_api_parser.rst.txt  http_client.rst.txt  index.rst.txt
docs/api/: corona_api_client.html  corona_api_client.rst  corona_api_parser.html  corona_api_parser.rst  http_client.html  http_client.rst  index.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  (+34 more)
include/coronan/: corona-api_client.h  corona-api_client.hpp  corona-api_datatypes.h  corona-api_datatypes.hpp  corona-api_parser.h  corona-api_parser.hpp  http_client.hpp  ssl_client.hpp  ssl_context.h  ssl_context.hpp  ssl_initializer.hpp
include/covidnan/: lib.hpp
nix/: cmake.nix  nix-lock.toml  shell.nix  sources.nix
src/: CMakeLists.txt  corona-api_parser.cpp  http_client.cpp  lib.cpp  ssl_client.cpp  ssl_context-linux.cpp  ssl_context-win.cpp  ssl_initializer.cpp
tests/: CMakeLists.txt  corona-api_client_test.cpp  corona-api_json_parser_test.cpp  http_client_test.cpp  main.cpp
